# Shell

./: CMakeLists.txt  LEEME.txt  README.md  analisis_lexico.c  analisis_lexico.h  avl.c  avl.h  bison.tab.c  bison.tab.h  bison.y  comandos.c  comandos.h  definiciones.h  errores.c  errores.h  flex.l  flex.yy.c  flex.yy.h  go-print.txt  hola2.txt  interprete.c  interprete.h  main.c  makefile  pila.c  prueba.go  tabla_simbolos.c  tabla_simbolos.h
Entregable/: avl.c  avl.h  bison.tab.c  bison.tab.h  bison.y  comandos.c  comandos.h  errores.h  flex.l  flex.yy.c  flex.yy.h  interprete.c  interprete.h  pila.c  pila.h  tabla_simbolos.c  tabla_simbolos.h
Entregable/material/: hola.txt
Entregar v1/: LEEME.txt  analisis_sintactico.c  analisis_sintactico.h  avl.c  errores.c  errores.h  go.l  go.yy.c  makefile  tabla_simbolos.h
SALIDAS/: salida_bien.txt  salida_flex.txt
documents/: funcionalidades.txt
libreria/: negador.c
